backend/deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-be
  labels:
    app: app-be
spec:
  selector:
    matchLabels:
      app: app-be
  template:
    metadata:
      labels:
        app: app-be
    spec:
      containers:
      - name: app-be
        image: mwbowo/nodejs:back-end
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
