backend/svr-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: svr-be
spec:
  selector:
    app: app-be
  ports:
  - port: 80
    targetPort: 5000
