backend/ingress-be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-be
  labels:
    name: ing-be
spec:
  ingressClassName: nginx
  rules:
  - host: be.kube.mwbowo.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svr-be
            port: 
              number: 80
